[tool.poetry]
name = "search-clothes"
version = "0.1.0"
description = ""
authors = ["Mario8602 <hellp8901@gmail.com>"]
readme = "README.md"
packages = [{include = "search_clothes"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
pytelegrambotapi = "^4.9.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
